# botasaurus-requests

./: README.md  package.json  pyproject.toml  setup.py
botasaurus_requests/: __init__.py  __main__.py  __version__.py  cffi.py  client.py  cookies.py  exceptions.py  headers.py  parser.py  reqs.py  request_class.py  request_functions.py  response.py  session.py
